<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KaChing</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="menu_insert">Add Account</string>
    <string name="menu_delete">Delete Account</string>
  	<string name="action_add"></string>
	<string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>  	
    
  	<!-- Category types -->    
  	<string-array name="category_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    
  	<!-- Category types filter -->    
  	<string-array name="category_types_filter">
        <item>All</item>  	    
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    
  	<!-- Amount types filter -->    
  	<string-array name="amount_filters">
        <item>All</item>  	    
        <item>Exact</item>
        <item>Over</item>
        <item>Under</item>
        <item>Between</item>
    </string-array>
    
  	<!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >MAIN</item>
        <item >Entries</item>
        <item >Recurring entries</item>
        <item >Accounts</item>
        <item >Categories</item>
        <item >REPORTS</item>
        <item >Reports</item>
        <item >Loans</item>
        <item >Forecast</item>
        <item >PLANNING</item>       
        <item >Budgets</item>
        <item >Projects</item>     
        <item >Savings</item>
        <item >OPTIONS</item>    
        <item >Database</item>
        <item >Settings</item>                       
    </string-array>
 
    <!-- Nav Drawer Menu type -->
    <!-- 1=groups, 0=items -->
    <string-array name="naw_drawer_type">
        <item >1</item>
        <item >0</item>
        <item >0</item>
        <item >0</item>
        <item >2</item>
        <item >1</item>
        <item >0</item>
        <item >0</item>
        <item >2</item>
        <item >1</item>     
        <item >0</item>
        <item >0</item>
        <item >2</item>
        <item >1</item>
        <item >0</item>
        <item >2</item>                      
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!-- The ones numbered with 1 are groups -->
    <array name="nav_drawer_icons">
        <item >1</item>        
        <item>drawable/ic_home</item>
        <item>drawable/ic_people</item>
        <item>drawable/ic_photos</item>
        <item>drawable/ic_communities</item>
        <item >1</item>        
        <item>drawable/ic_pages</item>
        <item>drawable/ic_whats_hot</item>     
        <item>drawable/ic_home</item>
        <item >1</item>
        <item>drawable/ic_people</item>
        <item>drawable/ic_photos</item>
        <item>drawable/ic_communities</item>
        <item >1</item>
        <item>drawable/ic_pages</item>
        <item>drawable/ic_whats_hot</item>            
    </array>
  
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Toast messages -->
    <string name="toast_contact_no_email">"Sorry, we could not find any e-mail apps on your device. Please install first and try again."</string>
    <string name="toast_unsupported_encoding">"Sorry, your device does not support UTF-8 encoding."</string>
    <string name="toast_sliding_menu_toggle">"Sliding menu toggled!"</string>
    <string name="toast_sliding_menu_custom_action">"This could call custom action!"</string>
    <string name="toast_sliding_menu_no_action_default">"No action by default."</string>
    
    <!-- Context menu -->
    <string name="cnt_menu_edit">Edit</string>
    <string name="cnt_menu_delete">Delete</string> 
    <string name="cnt_menu_copy">Copy</string>           
    <string name="cnt_menu_subcategories">Subcategories</string>
    <string name="transaction_filter">Filter</string>
    <string name="transaction_view_period">View period</string>
    <string name="transaction_group_by">Group by</string>   
    <string name="transaction_search">Search</string>
    
    <!-- Accounts -->
	<string name="account_summary">Summary</string>
	<string name="account_description">Delete Account</string>
  	<string name="account_edit_summary">Summary</string>
  	<string name="account_edit_description">Description</string>
  	<string name="account_edit_confirm">Confirm</string>
  	<string name="account_row">Account</string>	
  	<string name="account_icon">Account icon</string>
  	<string name="account_add">ADD A NEW ACCOUNT</string>   
  	<string name="no_accounts">No accounts are set.</string>    
  	<string name="account_edit">EDIT ACCOUNT</string>	
  	<string name="account_name">Name</string>
  	<string name="account_balance">Initial Balance</string>
  	<string name="account_include_balance">Include in Balance</string>
  	<string name="account_include_reports">Include in Reports</string>
  	<string name="account_save">SAVE</string>
  	<string name="account_cancel">Cancel</string>
  	<string name="account_type">Type</string>
  	<string name="account_type_prompt">Choose a type</string>
  	<string name="account_name_blank">Please enter a name for the account.</string>
  	<string name="account_delete">Delete</string>
  	<string name="account_choose">CHOOSE ACCOUNT</string>
  	<string name="account_prompt">Choose an account</string>      	
  	<string name="account_filter">Account</string>	  	
  	<string name="account_all">All</string>  	
  	
  	<!-- Amount -->
  	<string name="amount_prompt">Choose an amount</string>     
	<string name="amount_filter">Amount</string>     
	<string name="amount_hint">Enter an amount</string>
	<string name="amount_exact">Exact amount</string>	
	<string name="amount_over">Amount over</string>	
	<string name="amount_under">Amount under</string>	
	<string name="amount_between">Amount between</string>				
  	  	
   	<!-- Account types -->
  	<string-array name="account_types">
        <item>Cash</item>
        <item>Bank</item>
        <item>Credit Card</item>
    </string-array>
     	
    <!-- Categories -->
  	<string name="category_add">ADD CATEGORY</string>
  	<string name="category_type_prompt">Choose a type</string>  	
   	<string name="categoryImage">Image</string>
  	<string name="category_name_blank">Please enter a name for the category.</string>
  	<string name="category_name_exists">Category name already exists.</string>
  	<string name="category_icon">Category icon</string>  	
  	<string name="category_choose">CHOOSE CATEGORY</string>  	
  	<string name="cnt_menu_cat_new">New Category</string>
  	<string name="cnt_menu_subcat_new">New Subcategory</string>  
  	<string name="category_prompt">Choose a category</string>    	
  	<string name="category_all">All</string>
  		
  	 	        
    <!-- Subcategories -->
    <string name="subcategory">SUBCATEGORIES</string>
    <string name="subcat_category">Category</string>
    <string name="subcat_add_button"></string>
    <string name="subcat_name">Name</string>
    <string name="subcat_name_hint">Type the name</string>
    <string name="subcat_name_empty">Please enter a name for the subcategory.</string>
  	<string name="subcategory_name_exists">Subcategory name already exists for this category.</string>    
  	  	
  	<!--  Transactions -->
  	<string name="transaction_options">Transaction options</string>
  	<string name="transaction_add">ADD TRANSACTION</string>  	
	<string name="transaction_edit">EDIT TRANSACTION</string>  	  	
	<string name="transaction_copy">COPY TRANSACTION</string>  	  	
  	<string name="transaction_empty_string"></string>
  	<string name="transaction_amount">Amount</string>  	
  	<string name="transaction_category">Category</string>  	  	
  	<string name="transaction_account">Account</string>  	  	
  	<string name="transaction_date">Date</string>  	  	
   	<string name="transaction_note">Note</string>  	  	 	
  	<string name="transaction_amount_check">Please check the transaction amount.</string>  	  	
  	<string name="transaction_account_check">Please choose an account.</string>    	
  	<string name="transaction_date_check">Please choose a date.</string>    	
  	<string name="transaction_category_check">Please choose a category.</string>  	
  	<string name="transaction_balance">Balance</string>  	  	
  	<string name="transaction_type">Type</string>
  	<string name="transaction_subcategory">Subcategory</string>
  	<string name="transaction_filter_header">FILTER TRANSACTIONS</string>  	
  	
  	<!--  Transactions -->
  	<string name="filter_cancel">Cancel</string>  	
	<string name="filter_save">Save</string>  	  	
  	
  	<!--  Empty strings -->
  	<string name="empty_string"></string>
  	
  	<!-- DUMMY DATA -->
  	<!-- Category names expense -->
    <string name="categoryExpense1">Food</string>
    <string name="categoryExpense2">Home</string>
    
    <!-- Category names income -->
    <string name="categoryIncome1">Payroll</string>
 	<string name="categoryIncome2">Drug money</string>
 	<string name="categoryIncome3">Bribe</string>
 	<string name="categoryIncome4">Hits</string>
 	<string name="categoryIncome5">Bank robbery</string>
    
  	<!-- DUMMY DATA -->    
    <!-- Subcategory names expenses -->
    
    <!-- Food -->
    <string name="subCategoryExpense101">Home</string>
    <string name="subCategoryExpense102">Work</string>
    <string name="subCategoryExpense103">Out</string>
    <!-- Home -->
    <string name="subCategoryExpense201">Repairs</string>
    <string name="subCategoryExpense202">Car</string>
    <string name="subCategoryExpense203">Cleaning</string>    
    
  	<!-- DUMMY DATA -->    
    <!-- Subcategory names incomes -->

    <!-- Payroll -->
    <string name="subCategoryIncome101">Paycheck</string>
    <string name="subCategoryIncome102">Bonus</string>   
    <string name="subCategoryIncome103">Raise</string>       
    
    <!-- Drug money -->
    <string name="subCategoryIncome201">Sold to kids</string>
    <string name="subCategoryIncome202">Sold to cops</string>   
    <string name="subCategoryIncome203">Sold to nuns</string>       
    
    <!-- Bribe -->
    <string name="subCategoryIncome301">President</string>
    <string name="subCategoryIncome302">Boss</string>   
    <string name="subCategoryIncome303">Pope</string>       
    
    <!-- Hits -->
    <string name="subCategoryIncome401">Neighbour\'s dog</string>
    <string name="subCategoryIncome402">Keyboard</string>   
    <string name="subCategoryIncome403">Mouse</string>       
    
    <!-- Bank robbery -->
    <string name="subCategoryIncome501">Bank of America</string>
    <string name="subCategoryIncome502">Zaba</string>   
    <string name="subCategoryIncome503">PBZ</string>           
        
</resources>