<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <!-- upper part -->
    <RelativeLayout
        android:id="@+id/upperLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/list_pressed2" >

        <TextView
            android:id="@+id/categoryChoseText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/list_pressed2"
            android:gravity="center"
            android:text="@string/transaction_filter_header"
            android:textColor="#FFFFFF"
            android:textSize="20sp" >
        </TextView>
    </RelativeLayout>
    
    <RelativeLayout
         android:id="@+id/RelativeLayout2"
         android:layout_below="@id/upperLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="300dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/layout_bg"
         android:orientation="horizontal" >

       	 <TextView
       	     android:id="@+id/categoryTypeText"
       	     android:layout_width="wrap_content"
       	     android:layout_height="50dp"
       	     android:layout_alignBottom="@+id/categoryTypeChoice"
       	     android:layout_alignParentLeft="true"
       	     android:layout_alignParentTop="true"
       	     android:layout_marginLeft="10dp"
       	     android:gravity="left|center"
       	     android:layout_toLeftOf="@+id/categoryTypeChoice"
       	     android:text="@string/transaction_type"
       	     android:textSize="18sp" />
        	   
	     <Spinner
	         android:id="@+id/categoryTypeChoice"
	         android:layout_width="fill_parent"
	         android:layout_height="50dp"
	         android:layout_alignLeft="@+id/categoryChoice"
	         android:layout_alignParentTop="true"
	         android:prompt="@string/category_type_prompt" />
	            	 
	     <Spinner
	         android:id="@+id/categoryChoice"
	         android:layout_width="fill_parent"
	         android:layout_height="50dp"
	         android:layout_below="@+id/categoryTypeChoice"
	         android:layout_toRightOf="@+id/categoryChoiceText"
	         android:prompt="@string/category_prompt" />

	     <TextView
	         android:id="@+id/categoryChoiceText"
	         android:layout_width="wrap_content"
	         android:layout_height="50dp"
	         android:gravity="left|center"
       	     android:layout_marginLeft="10dp"	         
	         android:layout_alignBottom="@+id/categoryChoice"
	         android:layout_alignParentLeft="true"
	         android:layout_alignTop="@+id/categoryChoice"
	         android:text="@string/transaction_category"
	         android:textSize="18sp" />
	     
	     <Spinner
	         android:id="@+id/accountChoice"
	         android:layout_width="fill_parent"
	         android:layout_height="50dp"
	         android:layout_alignLeft="@+id/categoryChoice"
	         android:layout_below="@+id/categoryChoice"
	         android:prompt="@string/account_prompt" />

	     <TextView
	         android:id="@+id/accountText"
	         android:layout_width="wrap_content"
	         android:layout_height="50dp"
       	     android:layout_marginLeft="10dp"	         
	         android:gravity="left|center"
	         android:layout_alignBottom="@+id/accountChoice"
	         android:layout_alignParentLeft="true"
	         android:layout_alignTop="@+id/accountChoice"
	         android:text="@string/account_filter"
	         android:textSize="18sp" />	     

	     <Spinner
	         android:id="@+id/amountChoice"
	         android:layout_width="fill_parent"
	         android:layout_height="50dp"
	         android:layout_alignLeft="@+id/accountChoice"
	         android:layout_below="@+id/accountChoice"
	         android:prompt="@string/amount_prompt" />

	     <TextView
	         android:id="@+id/amountText"
	         android:layout_width="wrap_content"
	         android:layout_height="50dp"
       	     android:layout_marginLeft="10dp"	         
	         android:gravity="left|center"
	         android:layout_alignBottom="@+id/amountChoice"
	         android:layout_alignParentLeft="true"
	         android:layout_alignTop="@+id/amountChoice"
	         android:text="@string/amount_filter"
	         android:textSize="18sp" />	     	         
    </RelativeLayout>    
   
    <!-- Bottom layout and button for save -->
    
   	 <RelativeLayout
      	  	android:id="@+id/RelativeLayout3"
      	  	android:layout_width="wrap_content"
       	 	android:layout_height="50dp"
       	 	android:layout_alignParentBottom="true"
       	 	android:layout_alignParentLeft="true"
       		android:layout_alignParentRight="true"
        	android:background="@color/list_pressed2" >
   		    
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/account_save"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:gravity="center" />
    </RelativeLayout>   
</RelativeLayout>
