<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<ImageView
        android:id="@+id/categoryItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/categoryImage"
        android:src="@drawable/cash"
        android:layout_toRightOf="@+id/categoryNameNew" >
    </ImageView>

    <EditText
        android:id="@+id/categoryNameNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:inputType="textCapWords" >
        <requestFocus />
    </EditText>
    
    <Spinner
        android:id="@+id/categoryTypeChoiceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/categoryItemImage"        
        android:entries="@array/category_types"
        android:prompt="@string/category_type_prompt" />	    

   	<GridView
   	    android:id="@+id/categoryGridView"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="true"
   	    android:layout_above="@+id/buttonCatSave"
   	    android:layout_below="@+id/categoryTypeChoiceEdit"
   	    android:columnWidth="80dp"
   	    android:numColumns="auto_fit"
   	    android:stretchMode="columnWidth" >
   	</GridView>
   	
   	 <Button
   	     android:id="@+id/buttonCatSave"
   	     android:layout_width="wrap_content"
   	     android:layout_height="wrap_content"
   	     android:layout_alignParentBottom = "true"
   	     android:text="@string/account_save" />

     <Button
         android:id="@+id/buttonCatCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom = "true"
         android:layout_toRightOf="@+id/buttonCatSave"
         android:text="@string/account_cancel" />

</RelativeLayout>
