<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:layout_marginTop="10dp"
    android:orientation="horizontal" >

    <RelativeLayout 
         android:id="@+id/LinearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="50dp"       
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@color/list_pressed2" >
         
	  	 <TextView
	  	     android:id="@+id/subcategory"
	   	 	android:layout_width="wrap_content"
	   	 	android:layout_height="fill_parent"  	
	   	 	android:gravity="fill"
	   	 	android:text="@string/subcategory"
	   	 	android:textColor="@color/Orange"
	   	 	android:textSize="20sp"> 
	    </TextView>
	    
	  	<ImageButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_alignParentRight="true"
            android:textColor="@color/White"
            android:contentDescription="@string/subcat_add_button"
            android:src="@drawable/plus"
            android:textSize="20sp" />
	    
    </RelativeLayout>    
  	<ImageView
   	 	android:layout_below="@+id/LinearLayout1"  	    
        android:id="@+id/categoryItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/categoryImage"
        android:src="@drawable/cash">
    </ImageView>
    
  	 <TextView
  	    android:id="@+id/subcat_cat"
   	 	android:layout_width="wrap_content"
   	 	android:layout_height="wrap_content"
   	 	android:layout_toRightOf="@+id/categoryItemImage"
   	 	android:layout_below="@+id/LinearLayout1"
   	 	android:text="@string/subcat_category"
   	 	android:textColor="@color/Blue"
   	 	android:textSize="20sp"> 
    </TextView>
    
  	<ListView
        android:id="@id/android:list"
        android:layout_below="@+id/subcat_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="false" >
    </ListView>
	
</RelativeLayout>
